--- a/src/_hero2.scss
+++ b/src/_hero2.scss
@@ -123,7 +123,7 @@
 
 .hero-container {
   @include d-flex-fd-ai-jc-g(column, center, center, 2rem);
-  @include container();
+
 
   @include desktop() {
     display: grid;
